--- a/static/style.scss
+++ b/static/style.scss
@@ -1,7 +1,134 @@
+@import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
+
+:global(
+    html,
+    body,
+    div,
+    span,
+    applet,
+    object,
+    iframe,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    p,
+    blockquote,
+    pre,
+    a,
+    abbr,
+    acronym,
+    address,
+    big,
+    cite,
+    code,
+    del,
+    dfn,
+    em,
+    img,
+    ins,
+    kbd,
+    q,
+    s,
+    samp,
+    small,
+    strike,
+    strong,
+    sub,
+    sup,
+    tt,
+    var,
+    b,
+    u,
+    i,
+    center,
+    dl,
+    dt,
+    dd,
+    ol,
+    ul,
+    li,
+    fieldset,
+    form,
+    label,
+    legend,
+    table,
+    caption,
+    tbody,
+    tfoot,
+    thead,
+    tr,
+    th,
+    td,
+    article,
+    aside,
+    canvas,
+    details,
+    embed,
+    figure,
+    figcaption,
+    footer,
+    header,
+    hgroup,
+    menu,
+    nav,
+    output,
+    ruby,
+    section,
+    summary,
+    time,
+    mark,
+    audio,
+    video
+  ) {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+}
+
+:global(
+    article,
+    aside,
+    details,
+    figcaption,
+    figure,
+    footer,
+    header,
+    hgroup,
+    menu,
+    nav,
+    section
+  ) {
+  display: block;
+}
+:global(body) {
+  line-height: 1;
+}
+:global(ol, ul) {
+  list-style: none;
+}
+:global(blockquote, q) {
+  quotes: none;
+}
+:global(blockquote:before, blockquote:after, q:before, q:after) {
+  content: '';
+  content: none;
+}
+:global(table) {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
 :global(*, :after, :before) {
   box-sizing: border-box;
 }
+
 :global(*) {
+  font-family: 'Jua', sans-serif;
   margin: 0;
 }
 :global(body, html) {
