feat: 스타일 수정

--- a/static/style.scss
+++ b/static/style.scss
@@ -132,7 +132,9 @@
   margin: 0;
 }
 :global(body, html) {
+  margin: 0;
   height: 100%;
+  overflow: hidden;
 }
 :global(body) {
   -webkit-font-smoothing: antialiased;
