--- a/static/style.scss
+++ b/static/style.scss
@@ -139,6 +139,7 @@
 :global(body) {
   -webkit-font-smoothing: antialiased;
   line-height: 1.5;
+  touch-action: pan-x pan-y;
 }
 :global(canvas, img, picture, svg, video) {
   display: block;
