:sparkles: 메인 페이지 스타일 변경

--- a/static/style.scss
+++ b/static/style.scss
@@ -154,6 +154,10 @@
 :global(#__next, #root) {
   isolation: isolate;
 }
+:global(a) {
+  color: inherit;
+  text-decoration: none;
+}
 :global(button) {
   font: inherit;
   padding: 0;
